--- a/Restaurante/Polls/templates/Polls/MenuVegetariano.html
+++ b/Restaurante/Polls/templates/Polls/MenuVegetariano.html
@@ -52,6 +52,10 @@
               <nav class="inicioseccion">
                 <button class="btn btn-outline-success my-2 my-sm-0"><a href="{% url 'Registrar' %}"><img src="{% static 'polls/img/icons8-usuario-64.png' %}" alt=""></a></button>
             </nav>
+            <nav class="salir">
+                <button class="btn btn-outline-success my-2 my-sm-0"><a href="{% url 'desconectar' %}">
+                  <img src="{% static 'Polls/img/icons8-salida-30.png' %}" alt=""></a></button>
+              </nav>
             </div>
           </div>
         </nav>
