--- a/Restaurante/Polls/templates/Polls/index.html
+++ b/Restaurante/Polls/templates/Polls/index.html
@@ -48,9 +48,16 @@
               <a class="nav-link" href="{% url 'Reserva' %}">Reserva</a>
             </li>
           </ul>
+          <nav class="username_container">
+            <h2 class="username">Hola {{ user.get_username }}</h2>
+          </nav>
           <nav class="inicioseccion">
             <button class="btn btn-outline-success my-2 my-sm-0"><a href="{% url 'Registrar'%}"><img
                   src="{% static 'polls/img/icons8-usuario-64.png' %}" alt=""></a></button>
+          </nav>
+          <nav class="salir">
+            <button class="btn btn-outline-success my-2 my-sm-0"><a href="{% url 'desconectar' %}">
+              <img src="{% static 'Polls/img/icons8-salida-30.png' %}" alt=""></a></button>
           </nav>
         </div>
       </div>
