--- a/Restaurante/Polls/templates/Polls/Contacto.html
+++ b/Restaurante/Polls/templates/Polls/Contacto.html
@@ -35,6 +35,7 @@
                 Menus
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
+                <li><a class="dropdown-item" href="{% url 'tienda' %}">Menu</a></li>
                 <li><a class="dropdown-item" href="{% url 'MenuVegetariano' %}">Menu vegetariano</a></li>
                 <li><a class="dropdown-item" href="{% url 'MenuNormal' %}">Menu Normal</a></li>
                 <li><a class="dropdown-item" href="{% url 'Platos' %}">Agregar Platos</a></li>
