--- a/Restaurante/Polls/templates/Polls/carrito.html
+++ b/Restaurante/Polls/templates/Polls/carrito.html
@@ -1,3 +1,4 @@
+<div class="container5">
 <div class="alert alert-primary" role="alert">
 <table class="table table-bordered">
     <thead>
@@ -38,8 +39,9 @@
 <hr>
 </div>
 <div class="d-grid gap-2">
-    <div class="col-6"><a href="{% url 'CLS' %}" class="btn btn-outline-dark">Limpiar Carrito</a></div>
-    <div class="col-12"><a href="{% url 'pago' %}" class="btn btn-outline-warning">Pagar</a></div>
+    <div class="col-6"><a href="{% url 'CLS' %}" class="btn btn-dark">Limpiar Carrito</a></div>
+    <div class="col-12"><a href="{% url 'pago' %}" class="btn btn-warning">Pagar</a></div>
     <div class="col-18"><a href="#" class="btn btn-outline-dark">Ingresar código de descuento</a></div>
     
+</div>
 </div>
