--- a/Restaurante/Polls/templates/Polls/tienda.html
+++ b/Restaurante/Polls/templates/Polls/tienda.html
@@ -10,27 +10,74 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!-- Styles -->
     <link href="{% static 'css/estilos.css' %}" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <link type="text/css" rel="stylesheet" href="{% static 'polls/css/style.css' %}">
 </head>
 <body>
-    <div class="container">
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light">
+          <div class="container-fluid">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarScroll">
+              <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="{% url 'index' %}">Inicio</a>
+                </li>
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" id="navbarScrollingDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Menus
+                  </a>
+                  <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
+                    <li><a class="dropdown-item" href="{% url 'tienda' %}">Menu</a></li>
+                    <li><a class="dropdown-item" href="{% url 'MenuVegetariano' %}">Menu vegetariano</a></li>
+                    <li><a class="dropdown-item" href="{% url 'MenuNormal' %}">Menu Normal</a></li>
+                    <li><a class="dropdown-item" href="{% url 'Platos' %}">Agregar Platos</a></li>
+                  </ul>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="{% url 'Contacto' %}">Contacto</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="{% url 'Reserva' %}">Reserva</a>
+                </li>
+              </ul>
+              <nav class="carrito">
+                <button class="btn btn-outline-success my-2 my-sm-0"><a href="{% url 'MenuVegetariano'%}"><img
+                      src="{% static 'polls/img/carrito.png' %}" alt=""></a></button>
+              </nav>
+              <nav class="inicioseccion">
+                <button class="btn btn-outline-success my-2 my-sm-0"><a href="{% url 'Registrar' %}"><img src="{% static 'polls/img/icons8-usuario-64.png' %}" alt=""></a></button>
+            </nav>
+            <nav class="salir">
+                <button class="btn btn-outline-success my-2 my-sm-0"><a href="{% url 'desconectar' %}">
+                  <img src="{% static 'Polls/img/icons8-salida-30.png' %}" alt=""></a></button>
+              </nav>
+            </div>
+          </div>
+        </nav>
+      </header>
+    <div class="container4">
         <div class="row">
             <div class="col-12 align-self-center"><h1 class="display-1">FamilyEat</h1></div>
         </div>
-        <div class="row">
-            <div class="col-8">
-                <div class="row" style="padding: 10px 0;">
-                    <div class="col-12">
-                        <div class="row">
+        {% include "carrito.html" %}
+                        <div class="container7">
                             {% for producto in productos %}
-                            <div class="col-6">
-                                <div class="card"> 
-                                    <div class="card-body">
+                                <div class="card">
+                                    <div class="face front">
                                         <h5 class="card-title">{{producto.nombre}}</h5>
                                         <td><img src="/{{producto.img}}" alt="Foto" width="250"></td>
-                                        <p class="card-text">{{producto.categoria}}</p>
-                                        <p class="card-text">{{producto.precio}}</p>
+                                    </div>
+                                    <div class="face back">
+                                        <h5 class="card-title">{{producto.nombre}}</h5>
+                                        <p class="card-text">menu: {{producto.categoria}}</p>
+                                        <p class="card-text">El plato contiene: {{producto.caracteristica}}</p>
+                                        <p class="card-text">Valor: ${{producto.precio}}</p>
                                         <a href="{% url 'Add' producto.id %}" class="btn btn-dark">Agregar al carrito</a>
                                     </div>
+                                </div>
                                 </div>
                             </div>
                             {% endfor %}
@@ -38,14 +85,19 @@
                     </div>
                 </div>
             </div>
-            <div class="col-4">
-                {% include "carrito.html" %}
-            </div>
         </div>
     </div>
 
-    <!-- Bootstrap -->
-    <!--<script src="{% static 'bootstrap/js/bootstrap.bundle.min.js' %}"></script>
-
+<footer>
+    <nav id="RedesSociales">
+        <br>
+    <h4>Redes Sociales</h4>
+    <br>
+    <button class="btn btn-outline-success my-2 my-sm-0"><a href="https://www.instagram.com/"><img src="{% static 'polls/img/icons8-instagram-48.png' %}" alt=""></a></button>
+    <button class="btn btn-outline-success my-2 my-sm-0"><a href="https://www.facebook.com/"><img src="{% static 'polls/img/icons8-facebook-48.png' %}" alt=""></a></button>
+    <button class="btn btn-outline-success my-2 my-sm-0"><a href="https://www.twitter.com/"><img src="{% static 'polls/img/icons8-twitter-48.png' %}" alt=""></a></button>
+    <button class="btn btn-outline-success my-2 my-sm-0"><a href="https://www.google.com/maps/place/Fosa+de+las+Marianas/@11.3493333,142.190811,15z/data=!4m13!1m7!3m6!1s0x67328f3cd57de715:0x1bbe64e7a21aa7fc!2sFosa+de+las+Marianas!3b1!8m2!3d11.3493126!4d142.1995658!3m4!1s0x67328f3cd57de715:0x1bbe64e7a21aa7fc!8m2!3d11.3493126!4d142.1995658"><img src="{% static 'polls/img/icons8-google-maps-48.png' %}" alt=""></a></button>
+    </nav>
+</footer>
 </body>
 </html>
